style.css
@font-face {
    font-family: "Archivo";
    src: url(./fonts/Archivo-VariableFont_wdth\,wght.ttf);
}

body {
    display: flex;
    flex-direction: column;
    align-items: center;
    font-family: "Archivo", sans-serif;
    background-image: url(./img/background/webpage_background.jpg);
    background-size: cover;
    background-position: center;
    color: white;
    margin: 0px;
    min-height: 100vh;
}

h1 {
    font-size: 54px;
}

.content {
    max-width: 1920px;
}

.game-canvas {
    height: 720px;
    width: 1280px;
    background-color: black;
    cursor: pointer;
}

.game-wrapper {
    position: relative;
    width: 1280px;
    height: 720px;
    background-color: rgb(110, 79, 53);
}

.start-text {
    font-size: 24px;
    margin-top: 20px;
    background-color: rgba(0, 0, 0, 0.4);
    padding: 10px 30px;
    border-radius: 20px;
    text-align: center;
}

.controls {
    position: absolute;
    top: 12px;
    right: 12px;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 16px;
    z-index: 10;
}

.controls img {
    height: 30px;
    width: 30px;
}

.controls button {
    background: none;
    border: none;
    cursor: pointer;
    margin-top: 0;
}

.game-wrapper:fullscreen .game-canvas {
    width: 100vw;
    height: 56.25vw;
}

.game-wrapper:fullscreen {
    display: flex;
    align-items: center;
    justify-content: center;
}

.controls-display p {
    margin: 12px 0px;
    font-size: 22px;
}

.restart-button {
    display: none;
    padding: 12px 28px;
    font-size: 22px;
    border-radius: 10px;
    border-style: solid;
    border-color: rgb(255, 255, 255);
    border-width: 4px;
    background-color: #FFCA1C;
}

.restart-button:hover {
    background-color: #b3742c;
    border-color: rgb(240, 240, 240);
    color: rgb(255, 255, 255);
}

.start-button {
    padding: 12px 28px;
    font-size: 22px;
    border-radius: 10px;
    border-style: solid;
    border-color: rgb(255, 255, 255);
    border-width: 4px;
    background-color: #FFCA1C;
}

.start-button:hover {
    background-color: #b3742c;
    border-color: rgb(240, 240, 240);
    color: rgb(255, 255, 255);
}

.controls-display {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 64px;
}

.display-block {
    display: block;
}

.title-header {
    display: flex;
    justify-content: center;
}

.controls-description {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: rgba(0, 0, 0, 0.4);
    padding: 10px 30px;
    border-radius: 20px;
    width: 50%;
}

.controls-title {
    font-size: 32px;
    background-color: rgba(0, 0, 0, 0.4);
    padding: 16px 40px;
    border-radius: 12px;
}

.volume-control {
    display: flex;
    align-items: center;
    gap: 8px;
}

.volume-control input {
    display: none;
}

.volume-control:hover input {
    display: block;
}

.legal-links {
    display: flex;
    gap: 16px;
    margin-top: 20px;
}

.legal-links a {
    color: white;
    text-decoration: none;
    font-size: 18px;
}

.legal-links a:hover {
    text-decoration: underline;
    text-decoration-thickness: 3px;
}

.action-buttons {
    position: absolute;
    bottom: 12px;
    left: 50%;
    transform: translateX(-50%);
    display: flex;
    justify-content: space-around;
    min-width: 100dvw;
    gap: 16px;
}

.mobile-move-buttons {
    display: none;
    padding: 16px;
    font-size: 22px;
    border-radius: 10px;
    border-style: solid;
    border-color: rgb(255, 255, 255);
    border-width: 4px;
    background-color: #FFCA1C;
}

.mobile-move-buttons:hover {
    background-color: #b3742c;
    border-color: rgb(240, 240, 240);
    color: rgb(255, 255, 255);
}

.menu-buttons {
    display: flex;
    justify-content: center;
    gap: 16px;
}

.turn-info {
    display: none;
    position: absolute;
    left: 0px;
    top: 0px;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 1);
    z-index: 100;
    justify-content: center;
    align-items: center;
}

